[package]
name = "PasswordKeypad"
version = "0.1.0"
edition = "2024"


[dependencies]
embassy-executor = {version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.3.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

lcd_driver  = {path = "../../Utilities/LCD/lcd_driver/"}
keypad_driver  = {path = "../../Utilities/Keypad/keypad_driver/"}


[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
